--- a/html/svg/svg.html
+++ b/html/svg/svg.html
@@ -16,6 +16,18 @@
 				</svg>\
 			");
 		}
+
+		.social {
+		}
+		.icon {
+			display: inline-block;
+			width: 20px;
+			height: 20px;
+		}
+		.icon.vk {background-image: url("vkontakte.svg");}
+		.icon.yt {background-image: url("youtube.svg");}
+		.icon.fb {background-image: url("facebook.svg");}
+		.icon.ins {background-image: url("instagram.svg");}
 	</style>
 </head>
 <body>
@@ -28,5 +40,11 @@
 		<circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
 	</svg>
 	<div class="svg_bg"></div>
+	<p class="social">
+		<a href="" class="icon vk"></a>
+		<a href="" class="icon yt"></a>
+		<a href="" class="icon fb"></a>
+		<a href="" class="icon ins"></a>
+	</p>
 </body>
 </html>
