--- a/css/float/float.html
+++ b/css/float/float.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <style type="text/css">
-    .cle:after {
-      content: '';
+    .clear:after {
+      content: "";
       display: block;
       clear: both;
     }
@@ -43,7 +43,7 @@
   <hr>
   <p>Пример 3, <code>:after {clear: both}</code> - псевдоэлемент отменяет обтекание:</p>
 
-  <div class="cle">
+  <div class="clear">
     <div style="float: left; width: 33%; background-color: red;">1</div>
     <div style="float: left; width: 33%; background-color: red;">2</div>
   </div>
