--- a/webpack/_tasks/lab/lab.html
+++ b/webpack/_tasks/lab/lab.html
@@ -5,13 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="./temp_public/packs/css.css">
-  <script type="text/javascript" src="./temp_public/packs/js.js"></script>
+  <link rel="stylesheet" type="text/css" href="./temp_public/css.css">
+  <script type="text/javascript" src="./temp_public/js.js"></script>
 </head>
 <body>
-  <div id="div1"></div>
+  <div id="jQuery">jQuery не работает</div>
+  <div id="background-image">Тут должен быть бэкграунд</div>
+  <div class="clear-blocks">
+    <div class="block"><img src="./temp_public/images/200-200-beautiful-beauty.jpg"></div>
+    <div class="block"><img src="./temp_public/images/200-200-colorful-autumn.jpg"></div>
+    <div class="block"><img src="./temp_public/images/200-200-ripe-apple.jpg"></div>
+    <div class="block"><img src="./temp_public/images/200-200-blooming-flora.jpg"></div>
+    <div class="block"><img src="./temp_public/images/200-200-headlights-lamborghini.jpg"></div>
+    <div class="block"><img src="./temp_public/images/200-200-natural-nature.jpg"></div>
+  </div>
   <script type="text/javascript">
-    $("#div1").text("1")
+    $("#jQuery").text("jQuery работает.")
   </script>
 </body>
 </html>
