--- a/css/box-shadow/box-shadow.html
+++ b/css/box-shadow/box-shadow.html
@@ -9,22 +9,19 @@
   .shadow {
     /*
       box-shadow: [inset] <сдвиг по x> <сдвиг по y> <радиус размытия> <растяжение> <цвет>;
-       ┏━┳━┓
-       ┃ ┃ ┃
-       ┣━╋━┫
-       ┃ ┃ ┃
-       ┗━┻━┛
-       ┌─┬─┐
-       │ │ │
-       ├─┼─┤
-       │ │ │
-       └─┴─┘
-                    внутрь 
-                  ┌─┴─┐
-    */box-shadow: inset 0px 0px 5px 0px black;
+    */
+    box-shadow: inset 0px 0px 5px 0px black; /*
+                └─┬─┘ └┬┘ └┬┘ └┬┘ └┬┘
+      внутрь  ────┘    │   │   │   │
+      сдвиг по x  ─────┘   │   │   │
+      сдвиг по y  ─────────┘   │   │
+      радиус размытия  ────────┘   │
+      растяжение  ─────────────────┘
+      цвет 
+    */
   }
   .shadow2 {
-      box-shadow:       0px 0px 5px 5px black;
+    box-shadow: 0px 0px 5px 5px black;
   }
 </style>
 
