--- a/webpack/_tasks/lab/lab.html
+++ b/webpack/_tasks/lab/lab.html
@@ -9,7 +9,10 @@
   <script type="text/javascript" src="./temp_public/js.js"></script>
 </head>
 <body>
+
+  <!-- Очистить после -->
   <div id="jQuery">jQuery не работает</div>
+  <p ilorem></p>
   <div id="background-image">Тут должен быть бэкграунд</div>
   <div class="clear-blocks">
     <div class="block"><img src="./temp_public/images/200-200-beautiful-beauty.jpg"></div>
