--- a/css/float/float.html
+++ b/css/float/float.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <h1>Обтекание float или «позиционирование рядом»</h1>
-  <p>Пример 1, <code>float: left</code> - обтечь следующий элемент слева; <code>clear: both|left|right</code> - отменяет обтекание:</p>
+  <p>Пример 1, <code>float: left</code> - убраться из потока, поместиться по левому краю, обтекаться последующими элементаим; <code>clear: both|left|right</code> - отменяет обтекание:</p>
   <div style="float: left; width: 25%; background-color: red;">1</div>
   <div style="float: left; width: 25%; background-color: red;">2</div>
   <div style="clear: left; background-color: green;">3</div>
