--- a/css/float/float.html
+++ b/css/float/float.html
@@ -12,7 +12,7 @@
       font-size: 0;
       height: 100px;
     }
-    .ibw:before {
+    .ibw::before {
       content: "";
       display: inline-block;
       vertical-align: middle;
