--- a/google chrome/all.html
+++ b/google chrome/all.html
@@ -1,5 +1,8 @@
-TODO
 <h2>Настройки</h2>
+
+### Удаление принудительного https запроса к сайту
+chrome://net-internals/#hsts
+
 <h3>Отключение запроса пароля на связки ключей при запуске хрома</h3>
 <p>First of all, we have to search for Passwords and Encryption Keys. Also you can open it from terminal:</p>
 <pre>seahorse</pre>
