--- a/google/youtube_api/youtube_iframe_api.html
+++ b/google/youtube_api/youtube_iframe_api.html
@@ -1,5 +1,3 @@
-<snippet>
-	<content><![CDATA[
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -8,14 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="">
-  <style type="text/css"></style>
   <script type="text/javascript" src=""></script>
 </head>
 <body>
 </body>
+  <iframe type="text/html" width="640" height="360"
+    src="http://www.youtube.com/embed/UdR4U1b9aC0?autoplay=1&amp;start=40"
+    frameborder="0"
+  />
 </html>
-
-]]></content>
-	<tabTrigger>zzzhtmllayout</tabTrigger>
-	<scope>text.html.basic</scope>
-</snippet>
