--- a/js/_tasks/offer_filters/offer_filters.html
+++ b/js/_tasks/offer_filters/offer_filters.html
@@ -6,9 +6,8 @@
 </head>
 <body>
   <h1>Фильтры групп</h1>
-  <p>Отличается от классических фильтров тем, что нет способа снять выбор с со значений - в каждом фильтре одно из значений должно быть выбрано.</p>
-  <p>Исходя из этого, отключение значений приводящих к пустому пересечению может завести в тупик классический фильтр. Например, два товара со двумя свойствами: первый: цвет - красный, длинна - 1м, второй: цвет - зелёный, длина 2м. При "выборе" одного из товаров второй выбрать невозможно.</p>
-  <p>Таким образом, отключение значений должно быть только визуальным, или не быть вообще, при переключение на отключённое значение, второе значение должно перевыбираться в соответствии с данными.</p>
+  <p><a href="./README.md" target="_blank">README.md</a></p>
+  <p>Тут, соответствие начального выбра (html) данным оставлено на усмотрение бэкенду.</p>
   <div id="offers" class="js_group_filters_place">
     <div class="offer" data-id="1">
       1, <span class="code"></span>
