--- a/semantic-ui/grid/grid.html
+++ b/semantic-ui/grid/grid.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="/node_modules/semantic-ui-css/semantic.min.css">
   <style type="text/css">
     .ui.grid.collapsed > .column {
       padding-top: 4px;
@@ -75,7 +75,7 @@
     </div>
   </div>
   <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="/semantic/dist/semantic.min.js"></script>
+  <script type="text/javascript" src="/node_modules/semantic-ui-css/semantic.min.js"></script>
   <script type="text/javascript" src="/node_modules/ilorem/dist/ilorem.js"></script>
 </body>
 </html>
