--- a/semantic-ui/grid/grid1.html
+++ b/semantic-ui/grid/grid1.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="/node_modules/semantic-ui-css/semantic.min.css">
 </head>
 
 <body>
@@ -38,8 +38,8 @@
 			<div class="row"><div class="sixteen wide column" style="background-color: red;">sixteen</div></div>
 		</div>
 	</div>
-	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script>
+  <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="/node_modules/semantic-ui-css/semantic.min.js"></script>
 	<script type="text/javascript" src="/node_modules/ilorem/dist/ilorem.js"></script>
-	<script type="text/javascript" src="/semantic/dist/semantic.min.js"></script>
 </body>
 </html>
