--- a/semantic-ui/menu/menu2.html
+++ b/semantic-ui/menu/menu2.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/theme/bower/semantic/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="/node_modules/semantic-ui-css/semantic.min.css">
   <style type="text/css">
-    .ui.icon.label>.icon {
-      margin-right: 0;
-    }
-    .ui.label>.icon.unmargin {
-      margin-right: 0;
-    }
+  .ui.icon.label>.icon {
+    margin-right: 0;
+  }
+
+  .ui.label>.icon.unmargin {
+    margin-right: 0;
+  }
+
   </style>
 </head>
-<body>
 
+<body>
   <div class="ui menu">
     <div class="ui dropdown icon item">
       <i class="wrench icon"></i>
@@ -44,12 +47,9 @@
       </div>
     </div>
   </div>
-
   <div class="ui fluid container">
     <div class="ui grid">
       <div class="eight wide column">
-
-
         <div class="ui top attached menu">
           <div class="ui dropdown icon item">
             <i class="wrench icon"></i>
@@ -135,37 +135,30 @@
         <div class="ui bottom attached segment">
           <p>ads</p>
         </div>
-
-
       </div>
     </div>
   </div>
-
-
   <div class="ui two column grid container">
     <div class="column">
       <div class="ui segment">
-
-
-
-<div class="ui secondary vertical menu">
-  <a class="active item">Account </a>
-  <a class="item">Settings </a>
-  <div class="ui dropdown item" id="asdasd"><i class="dropdown icon"></i> Display Options
-    <div class="menu" id="asd">
-      <div class="header">Text Size</div>
-      <a class="item">Small</a>
-      <a class="item">Medium</a>
-      <a class="item">Large</a>
-    </div>
-  </div>
-</div>
-
-
+        <div class="ui secondary vertical menu">
+          <a class="active item">Account </a>
+          <a class="item">Settings </a>
+          <div class="ui dropdown item" id="asdasd"><i class="dropdown icon"></i> Display Options
+            <div class="menu" id="asd">
+              <div class="header">Text Size</div>
+              <a class="item">Small</a>
+              <a class="item">Medium</a>
+              <a class="item">Large</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="column">
-      <div class="ui segment"><div class="ui button" id="test_button">button</div></div>
+      <div class="ui segment">
+        <div class="ui button" id="test_button">button</div>
+      </div>
     </div>
     <div class="column">
       <div class="ui segment">Content</div>
@@ -177,20 +170,23 @@
       <div class="ui segment">Content</div>
     </div>
   </div>
-  <script type="text/javascript" src="/theme/bower/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="/theme/bower/semantic/dist/semantic.min.js"></script>
+  <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="/node_modules/semantic-ui-css/semantic.min.js"></script>
+  <script type="text/javascript" src="/node_modules/ilorem/dist/ilorem.js"></script>
   <script type="text/javascript">
-    $(document).ready(function(){
-      console.log('as');
-      $('.ui.dropdown').dropdown({
-        action: 'show',
-        direction: 'downward'
-      });
-      $('#test_button').on('click', function() {
-        $('#asd').show().addClass('transition visible').removeClass('hidden');
-        $('#asdasd').addClass('active visible');
-      });
+  $(document).ready(function() {
+    console.log('as');
+    $('.ui.dropdown').dropdown({
+      action: 'show',
+      direction: 'downward'
     });
+    $('#test_button').on('click', function() {
+      $('#asd').show().addClass('transition visible').removeClass('hidden');
+      $('#asdasd').addClass('active visible');
+    });
+  });
+
   </script>
 </body>
+
 </html>
