--- a/js/event/event.html
+++ b/js/event/event.html
@@ -48,10 +48,19 @@ https://developer.mozilla.org/ru/docs/Web/API/Event
 
     // 
     // event.stopPropagation()
+    // 
     // Для остановки всплытия нужно вызвать метод event.stopPropagation().
-    // Если у элемента есть несколько обработчиков на одно событие, то даже при прекращении всплытия все они будут выполнены.
-    // То есть, stopPropagation препятствует продвижению события дальше, но на текущем элементе все обработчики отработают.
-    // Для того, чтобы полностью остановить обработку, современные браузеры поддерживают метод event.stopImmediatePropagation(). Он не только предотвращает всплытие, но и останавливает обработку событий на текущем элементе.
+    // 
+    // Если у элемента есть несколько обработчиков на одно событие, то даже при
+    // прекращении всплытия все они будут выполнены.
+    // 
+    // То есть, stopPropagation препятствует продвижению события дальше, но на
+    // текущем элементе все обработчики отработают.
+    // 
+    // Для того, чтобы полностью остановить обработку, современные браузеры
+    // поддерживают метод event.stopImmediatePropagation(). Он не только
+    // предотвращает всплытие, но и останавливает обработку событий на текущем
+    // элементе.
     // 
     // event.preventDefault()
     // Предотвращает действие браузера по умолчанию.
