--- a/css/flexbox/flexbox3.html
+++ b/css/flexbox/flexbox3.html
@@ -45,8 +45,8 @@ html, body {
 
 
   /* Многострочность */
-  /*flex-wrap: nowrap;*/
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  /*flex-wrap: wrap;*/
 
   /*
     Выравнивани многострочности вдоль оси многострочности
@@ -60,7 +60,10 @@ html, body {
   align-content: space-between;
   align-content: space-around;
 
+  /* Отступ между строками */
+  gap: 20px;
 }
+
 .my-flex-block {
   /*background-color: tomato;*/
   /*flex-basis: 22%;*/
