--- a/js/_tasks/chart.js/public/index.html
+++ b/js/_tasks/chart.js/public/index.html
@@ -24,6 +24,7 @@
           </p>
         </div>
         <div class="col-md-6 order-md-2 text-right my-4">
+          <canvas id="myChart2"></canvas>
         </div>
       </header>
     </div>
