--- a/css/_tasks/center_vertical_align/center_vertical_align.html
+++ b/css/_tasks/center_vertical_align/center_vertical_align.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="utf-8">
   <style type="text/css">
+
+    #example-1 {
+    }
+    #example-1 .wrapper {
+      background-color: ;
+      width: 400px;
+      margin: 0 auto;
+      height: 400px;
+    }
+
   </style>
 </head>
 <body>
@@ -16,5 +26,13 @@
   transform: translateY(-50%);
 }</pre> то добавить хак если внутри выравнивания есть изображение : <pre>    -webkit-backface-visibility: hidden;
     -webkit-transform: translateZ(0) scale(1.0, 1.0);</pre></p>
+
+  <div id="example-1">
+    <h2>Пример 1</h2>
+    <div class="wrapper">
+      
+    </div>
+  </div>
+
 </body>
 </html>
