--- a/css/_tasks/table/table.html
+++ b/css/_tasks/table/table.html
@@ -13,9 +13,60 @@
 			display: table-cell;
 			background-color: #FFFF00;
 		}
+		.table, .table th, .table td {
+			border: 1px solid black;
+		}
 	</style>
 </head>
 <body>
+	<table>
+		<caption>caption</caption>
+		<thead>
+			<tr>
+				<th>thead</th>
+				<th>thead</th>
+				<th>thead</th>
+			</tr>
+		</thead>
+		<tfoot>
+			<tr>
+				<td>tfoot</td>
+				<td>tfoot</td>
+				<td>tfoot</td>
+			</tr>
+		</tfoot>
+		<tbody>
+			<tr>
+				<td>tbody</td>
+				<td>tbody</td>
+				<td>tbody</td>
+			</tr>
+		</tbody>
+	</table>
+	<table class="table">
+		<caption>caption</caption>
+		<thead>
+			<tr>
+				<th>thead</th>
+				<th>thead</th>
+				<th>thead</th>
+			</tr>
+		</thead>
+		<tfoot>
+			<tr>
+				<td>tfoot</td>
+				<td>tfoot</td>
+				<td>tfoot</td>
+			</tr>
+		</tfoot>
+		<tbody>
+			<tr>
+				<td>tbody</td>
+				<td>tbody</td>
+				<td>tbody</td>
+			</tr>
+		</tbody>
+	</table>
 	<div style="width: 50%;">
 		<div class="row">
 			<div class="cell">1</div>
